tests/specs/ecosystem/kms0219kms/portone/2_0_0.test
kms0219kms/portone/2.0.0
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
  --> /src/index.ts:91:19
   | 
91 |   public readonly auth = auth(this._request);
   |                   ^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/index.ts:92:19
   | 
92 |   public readonly payments = payments(this._request, {
   |                   ^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/index.ts:95:19
   | 
95 |   public readonly escrow = escrow(this._request, {
   |                   ^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /src/index.ts:98:19
   | 
98 |   public readonly paymentSchedules = paymentSchedules(this._request, {
   |                   ^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/index.ts:101:19
    | 
101 |   public readonly billingKeys = billingKeys(this._request, {
    |                   ^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/index.ts:104:19
    | 
104 |   public readonly cashReceipts = cashReceipts(this._request, {
    |                   ^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/index.ts:107:19
    | 
107 |   public readonly identifyVerifications = identifyVerifications(this._request, {
    |                   ^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /src/index.ts:110:19
    | 
110 |   public readonly forSpecificPg = forSpecificPg(this._request);
    |                   ^^^^^^^^^^^^^ this symbol is missing an explicit type
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/pg-specific.ts:9:14
  | 
9 | export const forSpecificPg = (_request: RequestInstance) => {
  |              ^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/common/request.ts:4:17
  | 
4 | export function createRequestInstance(baseURL: string, Authorization?: string) {
  |                 ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/identify-verifications.ts:9:14
  | 
9 | export const identifyVerifications = (
  |              ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/cash-receipts.ts:9:14
  | 
9 | export const cashReceipts = (
  |              ^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/billing-keys.ts:9:14
  | 
9 | export const billingKeys = (
  |              ^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/payment-schedules.ts:9:14
  | 
9 | export const paymentSchedules = (
  |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/escrow.ts:9:14
  | 
9 | export const escrow = (
  |              ^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/payments.ts:9:14
  | 
9 | export const payments = (
  |              ^^^^^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
 --> /src/lib/auth.ts:9:14
  | 
9 | export const auth = (_request: RequestInstance) => {
  |              ^^^^ this function is missing an explicit return type
  = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


